test/files/neg/t910.check
t910.scala:4: error: type mismatch;
 found   : scala.collection.immutable.Seq[Char]
 required: Seq[Int]
    val y: Seq[Int] = rest
                      ^
one error found
